objects/ASI_MFM_Purchase_Request__c.object
<CustomObject>
    <description>PR</description>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_AC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_A_C_Code__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>CN A/C Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests_AC_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Bu__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADSH</fullName>
                </value>
                <value>
                    <fullName>PRADF</fullName>
                </value>
                <value>
                    <fullName>PRCN</fullName>
                </value>
                <value>
                    <fullName>R-Central</fullName>
                </value>
                <value>
                    <fullName>R-East</fullName>
                </value>
                <value>
                    <fullName>R-North</fullName>
                </value>
                <value>
                    <fullName>R-North West</fullName>
                </value>
                <value>
                    <fullName>R-South</fullName>
                </value>
                <value>
                    <fullName>R-South West</fullName>
                </value>
                <value>
                    <fullName>IHBR</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>NW</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>Premium Central</fullName>
                </value>
                <value>
                    <fullName>Premium East</fullName>
                </value>
                <value>
                    <fullName>Premium North</fullName>
                </value>
                <value>
                    <fullName>Premium NW</fullName>
                </value>
                <value>
                    <fullName>Premium PRCN</fullName>
                </value>
                <value>
                    <fullName>Premium South</fullName>
                </value>
                <value>
                    <fullName>Premium SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Enqulry_Name__c</fullName>
        <label>Enquiry Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_PP_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_PP_Category__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>CN PP Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_PP_Category__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final, Complete</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Plan, CN Plan Read-Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Purchase Requests (Plan)</relationshipLabel>
        <relationshipName>Purchase_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Responsible_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Subchannel__c</fullName>
        <label>Po Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>TOT</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Mac On</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Transversal</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Prestige On</fullName>
                </value>
                <value>
                    <fullName>Wedding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Attach_File_Number__c</fullName>
        <label>Attach File Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Beneficiay_WS_Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beneficiay WS/Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASI MFM Brand Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Closing_Comments__c</fullName>
        <label>Closing Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>286</fullName>
                </value>
                <value>
                    <fullName>222</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expiration_Date__c</fullName>
        <defaultValue>today()+60</defaultValue>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Help_Text__c</fullName>
        <defaultValue>&quot;PR Number: 자동생성됩니다.&quot;&amp;BR()&amp;
&quot;PR Name: PR 의 제목을 신청자가 입력할 수 있으며 초기화면에는 Plan name이 자동으로 나타납니다.&quot;&amp;BR()&amp;
&quot;Plan: Plan에서 PR생성시에는 자동으로 입력 되며, Purchase Request에서 PR생성시에는 Plan number를 입력 하여야 합니다.&quot;&amp;BR()&amp;
&quot;Service/Item/POSM :&quot;&amp;BR()&amp;
&quot;*     &quot;&amp;&quot; POSM은 Venue기본 셋팅으로 메뉴판, 셋팅지, 베너등이 있으며 트레이드 마케팅에서 사용합니다.&quot;&amp;BR()&amp;
&quot;*     &quot;&amp;&quot; Item : 유형의 물품(제작물 포함)은 모두 해당 되며, 구매팀에서 직접 업체 선정 및 단가 결정 합니다.&quot;&amp;BR()&amp;
&quot;*     &quot;&amp;&quot; Service : 무형의 Service로 물품을 포함하지 아니하며, Sourcing Committee가 필요하며, Summary of bids 첨부해야 합니다.&quot;&amp;BR()&amp;
&quot;PR Raised Date: PR신청일이 자동으로 입력 됩니다.&quot;&amp;BR()&amp;
&quot;Currency: 국가별 통화를 표시하며 변경가능하고, 기본화면은 KRW로 표시됩니다.&quot;&amp;BR()&amp;
&quot;Exchange Rate: 해외 Invoice 인 경우 Currency 에 해당되는  Invoice date의 외환은행의 최초고시 매매기준율 조회 후 입력 후, 프린트 해서 제출&quot;&amp;BR()&amp;
&quot;Ship to: 물품구매시 수령하는 곳 및 서비스 용역을 제공할 장소를 표시하여 주세요.(본사, 지방지점, 물류센터, Agency 등)&quot;&amp;BR()&amp;
&quot;Company Address: 물품 수령 주소 및 장소의 위치를 입력하여 주세요.(예 : 서울시 강남구 서초구 서초동 1328-3), Agency의 경우 주소를 직접 입력하세요.&quot;&amp;BR()&amp;
&quot;Comment: 승인자 혹은 구매팀에 요청하고 싶은 말을 작성하세요.&quot;</defaultValue>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Ship_to_Address__c</fullName>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_attachFileNumber__c</fullName>
        <label>Attach File Number</label>
        <summarizedField>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_KR_countAttach__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_MFM_Purchase_Request_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>KR Purchase Request Line</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Purchase_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_companyCode__c</fullName>
        <label>Company Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASI Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Local_Currency__c</fullName>
        <label>Local Currency﻿</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Need_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Attachment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Created__c</fullName>
        <label>PO Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Created_v2__c</fullName>
        <formula>IF(ASI_MFM_Remaining_PR_Amount__c=0,&quot;Yes&quot;,
IF(ASI_MFM_Total_Amount__c=ASI_MFM_Remaining_PR_Amount__c,&quot;No&quot;,&quot;Partial&quot;
)
)</formula>
        <label>PO Check by System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PR_Date__c</fullName>
        <label>PR Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PR_Name__c</fullName>
        <label>PR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PR_Number__c</fullName>
        <label>PR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Plan should be approved.</errorMessage>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Approved, Closed</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Plan Read-Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Prefix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Once create PR, cannot change this field</inlineHelpText>
        <label>Prefix</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Prefix__c.ASI_MFM_Module__c</field>
                <operation>equals</operation>
                <value>PR,CN Vendor PR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Prefix__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Project_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Code</label>
        <referenceTo>ASI_MFM_Project_Code__c</referenceTo>
        <relationshipLabel>Purchase Requests</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Purchase_Request_ID_Upload__c</fullName>
        <externalId>true</externalId>
        <label>Purchase Request ID (Upload)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Raised_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>PR Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remaining_PR_Amount__c</fullName>
        <label>Remaining PR Amount</label>
        <summarizedField>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Rest_Amount__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Purchase_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Service_Item_POSM__c</fullName>
        <label>Service/Item/POSM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>KR Warehouse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PRs (Warehouse)</relationshipLabel>
        <relationshipName>Purchase_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Actual_Spending_Amount__c</fullName>
        <label>Total Actual Spending Amount</label>
        <summarizedField>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Actual_Spending_Amount__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Purchase_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Estimated_PR_budget__c</summarizedField>
        <summaryForeignKey>ASI_MFM_Purchase_Request_Line__c.ASI_MFM_Purchase_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <inlineHelpText>Once create PR, cannot change this field</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRK</fullName>
                </value>
                <value>
                    <fullName>PRKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_over_budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>over budget?</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Request</label>
    <listViews>
        <fullName>ASI_MFM_KR_Approved_PR</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>ASI_MFM_PO_Created_v2__c</columns>
        <columns>ASI_MFM_PO_Created__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Service_Item_POSM__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Ship_To__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Purchase_Request__c.ASI_MFM_KR_Purchase_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_MFM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>ASI_MFM_PO_Created__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>ASI_MFM_PO_Created_v2__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>KR Approved PR</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_KR_PR</fullName>
        <columns>ASI_MFM_PO_Created_v2__c</columns>
        <columns>ASI_MFM_PO_Created__c</columns>
        <columns>ASI_MFM_Remaining_PR_Amount__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Service_Item_POSM__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Ship_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Purchase_Request__c.ASI_MFM_KR_Purchase_Request,ASI_MFM_Purchase_Request__c.ASI_MFM_KR_Purchase_Request_Read_Only</value>
        </filters>
        <label>KR PR</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Vendor_Purchase_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_Vendor_Enqulry_Name__c</columns>
        <columns>ASI_CTY_CN_Vendor_Bu__c</columns>
        <columns>ASI_CTY_CN_Vendor_Subchannel__c</columns>
        <columns>ASI_CTY_CN_Vendor_Plan__c</columns>
        <columns>ASI_CTY_CN_Vendor_PP_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ASI_CTY_CN_Vendor_AC_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Purchase_Request__c.ASI_CN_Vendor_Purchase_Request</value>
        </filters>
        <label>CN Vendor Purchase Request</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ASI_CN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KR_Approved_PR_PO_Check_by_System</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_PO_Created_v2__c</columns>
        <columns>ASI_MFM_PO_Created__c</columns>
        <columns>ASI_MFM_PR_Name__c</columns>
        <columns>ASI_MFM_Remaining_PR_Amount__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Service_Item_POSM__c</columns>
        <columns>ASI_MFM_Currency__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Ship_To__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Purchase_Request__c.ASI_MFM_KR_Purchase_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_MFM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>ASI_MFM_PO_Created__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>KR PR for PO Created Checking</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KR_IT_Director</roleAndSubordinates>
            <roleAndSubordinates>ASI_KR_Purchasing_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KR_PR_test</fullName>
        <columns>ASI_MFM_PO_Created_v2__c</columns>
        <columns>ASI_MFM_PO_Created__c</columns>
        <columns>ASI_MFM_Remaining_PR_Amount__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Service_Item_POSM__c</columns>
        <columns>ASI_MFM_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Ship_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Purchase_Request__c.ASI_MFM_KR_Purchase_Request,ASI_MFM_Purchase_Request__c.ASI_MFM_KR_Purchase_Request_Read_Only</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>26001554</value>
        </filters>
        <label>KR PR_test</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PR Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_Vendor_Purchase_Request</fullName>
        <active>true</active>
        <label>CN Purchase Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Purchase_Request</fullName>
        <active>true</active>
        <label>KR Purchase Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Purchase_Request_Read_Only</fullName>
        <active>true</active>
        <label>KR Purchase Request Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_KR_Name_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;), !CONTAINS($Profile.Name,&apos;Administrator&apos;),ISCHANGED(  Name ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You are NOT allowed to change &quot;PR Number&quot; field when PR already created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_KR_PR_Type_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;), !CONTAINS($Profile.Name,&apos;Administrator&apos;),ISCHANGED( ASI_MFM_Type__c ))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Type__c</errorDisplayField>
        <errorMessage>You are NOT allowed to change &quot;Type&quot; field when PR already created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_KR_Prefix_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;), !CONTAINS($Profile.Name,&apos;Administrator&apos;),ISCHANGED(  ASI_MFM_Prefix__c ))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Prefix__c</errorDisplayField>
        <errorMessage>You are NOT allowed to change &quot;Prefix&quot; field when PR already created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_KR_Set_to_Close_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_KR&quot;), 
OR( 
AND(TEXT(PRIORVALUE(ASI_MFM_Status__c)) != TEXT(ASI_MFM_Status__c), TEXT(ASI_MFM_Status__c) = &quot;Closed&quot;, ISBLANK(ASI_MFM_Closing_Comments__c) ), 
AND(ISBLANK(ASI_MFM_Closing_Comments__c), NOT(ISBLANK(PRIORVALUE(ASI_MFM_Closing_Comments__c))), TEXT(ASI_MFM_Status__c) = &quot;Closed&quot; ) 
))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Closing_Comments__c</errorDisplayField>
        <errorMessage>Closing Comment is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_KR_ShipToAddress_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;), !CONTAINS($Profile.Name,&apos;Administrator&apos;),CONTAINS(  ASI_MFM_Ship_To__r.Name,&apos;Agency&apos;), ISBLANK(ASI_MFM_KR_Ship_to_Address__c) )</errorConditionFormula>
        <errorMessage>Please input Company Address</errorMessage>
    </validationRules>
</CustomObject>